--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,11 @@ jobs:
     needs: [lint, test]
     runs-on: ubuntu-latest
     steps:
-      - name: Build
-        run: npm run build
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Install dependencies
         run: npm i
+      - name: Build
+        run: npm run build
       - name: Deploy
         run: echo "Here's where it would deploy."
